# archive

./: README.md
backup-for-linux/: .zshrc
backup-for-linux/Pictures/: 1.png~
backup-for-linux/Pictures/Screenshots/: swappy-20250726-211436.png~
backup-for-linux/Pictures/krita/: 1.kra~  2.kra
backup-for-linux/Pictures/wallpapers/: cat.png~  deepseek_javascript_20250425_0665da.js
backup-for-linux/code/.config/: QtProject.conf  kritarc  mimeapps.list
backup-for-linux/code/asm/: first.asm  program
backup-for-linux/code/bash/: choise.sh  first.sh  name.sh  timer.sh  update.sh
backup-for-linux/code/cpp/Platformer/backup/Platformer 0.2/: CMakeLists.txt
backup-for-linux/code/cpp/Platformer/backup/Platformer 0.2/src/: main.cpp
backup-for-linux/code/cpp/Platformer/backup/Platformer 0.2/src/core/: Window.cpp  Window.h
backup-for-linux/code/cpp/Platformer/backup/Platformer 0.2/src/entities/: Player.cpp  Player.h
backup-for-linux/code/cpp/Platformer/backup/Platformer 0.2/src/levels/: Level1.h
backup-for-linux/code/cpp/Platformer/backup/Platformer 0.2/src/menu/: Menu.cpp  Menu.h
backup-for-linux/code/cpp/Platformer/backup/Platformer 0.2/src/utils/: TimeRewind.h
backup-for-linux/code/cpp/Platformer/libs/: CMakeLists.txt  toolchain-mingw.cmake
backup-for-linux/code/html/: youtube.png~
backup-for-linux/config/fish/: config.fish
backup-for-linux/config/hypr/: monitors.conf
backup-for-linux/config/kitty/: kitty.conf
backup-for-linux/config/nvim/: init.lua  lazy-lock.json
backup-for-linux/config/waybar/: Modules  ModulesWorkspaces  UserModules  (+3 more)
(+1601 files in other folders)
